# AutoBusinessPlanClaw

./: .gitignore  AUTOBUSINESSPLANCLAW_AGENTS.md  README.md  config.businessclaw.example.yaml  pyproject.toml
autobusinessplanclaw/: __init__.py  cli.py  config.py  health.py  html_export.py  llm.py  models.py  obsidian.py  openclaw_bridge.py  pipeline.py  prompts.py  questionnaire.py  research.py
docs/: ARCHITECTURE.md  OPENCLAW_RUNBOOK.md
examples/: config.generic-saas.yaml  config.generic-service.yaml  config.whatsapp-assistant.yaml  questionnaire.example.json  questionnaire.generic-saas.json  questionnaire.generic-service.json  questionnaire.whatsapp-assistant.json
tests/: test_config.py  test_html_export.py  test_injected_web_search.py  test_obsidian.py  test_openclaw_bridge.py  test_pipeline.py  test_research.py
tmp-gateway-bridge/: answers.yaml  config.yaml
tmp-gateway-bridge/run/: answers.json  business_plan.md  checkpoint.json  competitor_matrix.json  competitor_reference_table.json  critiques.json  research_results.json  tenth_man_report.json
tmp-gateway-bridge/run/evolution/: README.md  lessons.json
tmp-gateway-bridge/run/knowledge_base/: README.md  evidence.json  findings.json
tmp-gateway-bridge/run/prompts/: master_critique.prompt.json  master_critique.response.json  plan_draft.prompt.json  plan_draft.response.json  (+2 more)
tmp-proof-injected/: config.yaml  web_search_results.json
tmp-proof-injected/run/: checkpoint.json  competitor_matrix.json  competitor_reference_table.json  research_queries.json  research_results.json
(+27 files in other folders)
